add eliminar productos y avance de editar productos v2
